RHAIENG-6455: improve DMN generation quality
